--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "test:staged": "npm run test:e2e --  --passWithNoTests --findRelatedTests --config ./test/jest-e2e.json"
-
+    "test:e2e": "jest --config ./jest-e2e.json",
+    "test:staged": "jest --config ./jest-e2e.json --passWithNoTests --findRelatedTests",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -41,6 +41,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.8",
